# codehub

./: .gitignore  IMPROVEMENTS.md  INSTALL.md  MODES_PLAN.md  Makefile  README.md  SHORTCUTS.md  features.md  modes.md  notes.md  plan.md  preview.md  project_review.md  pyproject.toml  requirements.txt  run.py  workspace_embedding_issues.md
codehub/: __init__.py  __main__.py  account_manager.py  app.py  app_manager.py  app_notes.py  embedding_manager.py  group_registry.py  mode_manager.py  process_manager.py  session_app.py  session_history.py  session_registry.py  template_registry.py  window_discovery.py
codehub/ui/: account_dialog.py  app_dialog.py  command_palette.py  content_area.py  header_bar.py  ideas_dialog.py  kill_dialog.py  modes_dialog.py  notes_dialog.py  pomodoro.py  recovery_dialog.py  session_dialog.py  session_workspace.py  sidebar.py  styles.css  tasks_dialog.py  terminal.py  toast.py
codehub/utils/: config.py  constants.py
coder3/: __init__.py  __main__.py  app.py  app_manager.py  app_notes.py  embedding_manager.py  group_registry.py  process_manager.py  session_app.py  session_registry.py  window_discovery.py
coder3/ui/: app_dialog.py  content_area.py  header_bar.py  notes_dialog.py  session_dialog.py  session_workspace.py  sidebar.py  styles.css
coder3/utils/: config.py  constants.py
scripts/: create_deb.sh
