[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coder3"
version = "0.1.0"
description = "Session manager for code editors with embedded window support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["editor", "gtk", "session-manager", "vscode", "x11"]

# PyGObject (gi) cannot be installed via pip — it requires system GTK3 libraries.
# Install it first:
#   Debian/Ubuntu/Mint:  sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-3.0
#   Fedora/RHEL:         sudo dnf install python3-gobject gtk3
dependencies = [
    "python-xlib>=0.33",
    "psutil>=5.9.0",
]

[project.scripts]
coder3 = "coder3.app:main"

[tool.setuptools.packages.find]
include = ["coder3*"]

[tool.setuptools.package-data]
"coder3.ui" = ["*.css"]
